<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gsy.graduation.MainActivity">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"/>

    <TextView
        android:id="@+id/activity_map_hot_movies"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_map_hot_movies"
        android:textColor="@color/activity_map_text"
        android:gravity="center"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/activity_map_movie_around"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_map_hot_movies"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/activity_around_movie"
        android:textColor="@color/activity_map_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/activity_map_menu_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/activity_map_movie_around"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/activity_map_menu_pic"
        android:gravity="center"
        android:text="@string/activity_map_menu_tv"
        android:textColor="@color/black"
        android:textSize="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/activity_map_currunt_index_pic"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/activity_map_hot_map_pic"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/activity_map_root_pic"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/activity_map_shadow_fl"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@color/black_translate"
        android:layout_height="match_parent">
    </FrameLayout>


    <LinearLayout
        android:id="@+id/activity_map_menu_ll"
        android:layout_alignParentRight="true"
        android:layout_width="200dp"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/activity_map_satellite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/activity_map_satellite_normal_pc"/>

            <ImageView
                android:id="@+id/activity_map_2d"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/activity_map_2d_press_pc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_map_satellite"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_map_2d"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <ImageView
                    android:background="@color/blue"
                    android:layout_marginLeft="10dp"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="热力图"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <ImageView
                    android:background="@color/blue"
                    android:layout_marginLeft="10dp"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="热力图"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>



        </LinearLayout>

        <ListView
            android:layout_marginTop="10dp"
            android:id="@+id/activity_menu_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>


    </LinearLayout>


</RelativeLayout>
